src/test/ui/issue-4935.stderr
error[E0061]: this function takes 1 parameter but 2 parameters were supplied
  --> $DIR/issue-4935.rs:15:13
   |
LL | fn foo(a: usize) {}
   | ---------------- defined here
LL | //~^ defined here
LL | fn main() { foo(5, 6) }
   |             ^^^^^^^^^ expected 1 parameter

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0061"
